--- a/Exercise9/ci/docker-compose/docker-compose.yml
+++ b/Exercise9/ci/docker-compose/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   postgres:
-    container_name: leet_clone_container    
+    container_name: leet_clone_postgres   
     image: postgres:13.3
     environment:
       POSTGRES_DB: "leet_clone"
@@ -12,4 +12,12 @@ services:
       - .:/docker-entrypoint-initdb.d
       - .:/var/lib/postgresql/data            
     ports:
-      - "5432:5432"    
+    - "5432:5432"
+  api:
+    image: leet-clone-app
+    build:
+      dockerfile: ../Dockerfile
+    ports:
+    - "3000:3000"
+    depends_on:
+      - postgres                    
